# cellophane_modules

./: .gitignore  README.md  cliff.toml  modules.json  modules.yaml  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: branch_modules.yml  def_changelog.yml  def_list-modules.yml  def_list-releases.yml  def_module-pr.yml  def_module-semver.yml  def_pytest.yml  def_reviewdog-lint.yml  def_sync-poetry.yml  def_sync-pyproject.yml  def_sync-rye.yml  draft-release.yml  pr-close-main.yml  pr-close.yml  pr-open-complete.yml  pr-open-main.yml  pr-open.yml  push-main.yml  remove_deleted_release_branches.yml
modules/grid_engine/: README.md  __init__.py  pyproject.toml  requirements.txt  schema.yaml
modules/grid_engine/src/: executor.py
modules/grid_engine/tests/: __init__.py  conftest.py  integration.yaml  test_gridengine.py
modules/hcp/: README.md  __init__.py  pyproject.toml  requirements.txt  schema.yaml
modules/hcp/src/: hooks.py  mixins.py  util.py
modules/hcp/tests/: integration.yaml  test_hcp.py
modules/mail/: README.md  __init__.py  pyproject.toml  requirements.txt  schema.yaml
modules/mail/src/: hooks.py  mixins.py  util.py
modules/mail/tests/: integration.yaml
modules/nextflow/: README.md  __init__.py  pyproject.toml  schema.yaml
modules/nextflow/scripts/: nextflow.sh
modules/nextflow/src/: mixins.py  util.py
modules/nextflow/tests/: conftest.py  integration.yaml
modules/rsync/: README.md  __init__.py  conftest.py  pyproject.toml  requirements.txt  schema.yaml
modules/rsync/scripts/: rsync.sh
modules/rsync/src/: hooks.py  util.py
modules/rsync/tests/: integration.yaml  test_rsync.py
modules/s3/: README.md  __init__.py  pyproject.toml  requirements.txt  schema.yaml
modules/s3/src/: hooks.py  mixins.py  util.py
modules/s3/tests/: integration.yaml
modules/sentry/src/: hooks.py
modules/slims_/: README.md  __init__.py  config.example.yaml  pyproject.toml  requirements.txt  schema.yaml
modules/slims_/src/: connection.py  hooks.py  mixins.py  util.py
modules/slims_/tests/: __init__.py  criteria.yaml  integration.yaml  test_slims.py
modules/unpack/: README.md  __init__.py  pyproject.toml  schema.yaml
modules/unpack/scripts/: petagene.sh  spring.sh
modules/unpack/src/: extractors.py  hooks.py  util.py
modules/unpack/tests/: integration.yaml
petagene/: __init__.py  schema.yaml
petagene/scripts/: petasuite.sh
tests/: slims_.py  test_gridengine.py  test_hcp.py  test_integration.py  test_slims.py
tests/data/slims/: criteria.yaml
tests/integration/: hcp.yaml  mail.yaml  rsync.yaml  slims.yaml
