[project]
name = "cellophane-modules"
version = "1.0.0"
description = ""
authors = [{name = "dodslaser", email = "2969909+dodslaser@users.noreply.github.com"}]
dependencies = [
    "cellophane-grid-engine",
    "cellophane-hcp",
    "cellophane-mail",
    "cellophane-nextflow",
    "cellophane-rsync",
    "cellophane-s3",
    "cellophane-slims",
    "cellophane-unpack",
]
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "mypy>=1.0.0,<2.0.0",
    "black>=23.1.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "flake8>=6.0.0,<7.0.0",
    "pytest-mock>=3.11.1,<4.0.0",
    "pytest-clarity>=1.0.1,<2.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-subprocess>=1.5.3",
    "pylint>=3.0.2,<4.0.0",
    "cellophane @ git+https://github.com/ClinicalGenomicsGBG/cellophane.git@dev",
    "pytest>=9.0.2",
    "boto3-stubs[s3]>=1.40.51",
]

[tool.coverage.run]
concurrency = ["multiprocessing", "thread"]
branch = true

[tool.uv]
package = false

[tool.uv.sources]
cellophane-grid-engine = { workspace = true }
cellophane-hcp = { workspace = true }
cellophane-mail = { workspace = true }
cellophane-nextflow = { workspace = true }
cellophane-rsync = { workspace = true }
cellophane-s3 = { workspace = true }
cellophane-slims = { workspace = true }
cellophane-unpack = { workspace = true }

[tool.uv.workspace]
members = [
    "modules/grid_engine",
    "modules/hcp",
    "modules/mail",
    "modules/nextflow",
    "modules/rsync",
    "modules/s3",
    "modules/slims_",
    "modules/unpack",
]

[[tool.mypy.overrides]]
module = [
    "drmaa2",
    "cellophane.*",
    "NGPIris.*",
    "mistletoe",
    "slims.*"
]
ignore_errors = true
ignore_missing_imports = true
