[project]
name = "cellophane-grid-engine"
version = "v1.0.0"
description = "Grid Engine module for Cellophane"
authors = [{name = "dodslaser",email = "2969909+dodslaser@users.noreply.github.com"}]
readme = "README.md"
dependencies = [
    "uge-drmaa2 @ git+https://github.com/gridengine/drmaa2-python.git@v8.9.0",
]
requires-python = ">=3.11"

[tool.coverage.run]
concurrency = ["multiprocessing", "thread"]
branch = true

[tool.coverage.paths]
source = [
  "/",
  "**/modules/grid_engine/",
]

[tool.coverage.report]
include = [
  "src/*"
]

[tool.uv]
package = false