[tool.poetry]
name = "hcp"
version = "0.1.1"
description = "HCP module for Cellophane"
authors = ["dodslaser <2969909+dodslaser@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
ngpiris = '4.3.0'
urllib3 = '1.26.18'

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest-mock = "^3.11.1"
pytest-clarity = "^1.0.1"
pytest-cov = "^4.1.0"
pylint = "^3.0.2"
cellophane={git = "https://github.com/ClinicalGenomicsGBG/cellophane.git", branch = "dev"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
concurrency = ["multiprocessing", "thread"]
branch = true

[tool.coverage.paths]
source = [
  "/",
  "**/modules/hcp/",
]

[tool.coverage.report]
include = [
  "src/*"
]