[project]
name = "cellophane-hcp"
version = "0.1.1"
description = "HCP module for Cellophane"
authors = [{name = "dodslaser",email = "2969909+dodslaser@users.noreply.github.com"}]
readme = "README.md"
dependencies = [
    'ngpiris==4.3.0',
    'urllib3==1.26.18'
]
requires-python = ">=3.11,<3.12"

[tool.coverage.run]
concurrency = ["multiprocessing", "thread"]
branch = true

[tool.coverage.paths]
source = [
  "/",
  "**/modules/hcp/",
]

[tool.coverage.report]
include = [
  "src/*"
]

[tool.uv]
package = false