[project]
name = "cellophane-mail"
version = "1.0.0"
description = "Mail module for Cellophane"
authors = [{name = "dodslaser",email = "2969909+dodslaser@users.noreply.github.com"}]
readme = "README.md"
dependencies = [
    "jinja2>=3.1.2,<4.0.0",
    "mistletoe>=1.3.0,<2.0.0",


]
requires-python = ">=3.11,4.0"

[tool.coverage.run]
concurrency = ["multiprocessing", "thread"]
branch = true

[tool.coverage.paths]
source = [
  "/",
  "**/modules/mail/",
]

[tool.coverage.report]
include = [
  "src/*"
]

[tool.rye]
virtual = true
managed = true
universal = true
dev-dependencies = [
    "mypy>=1.0.0,<2.0.0",
    "black>=23.1.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "flake8>=6.0.0,<7.0.0",
    "pytest-mock>=3.11.1,<4.0.0",
    "pytest-clarity>=1.0.1,<2.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pylint>=3.0.2,<4.0.0",
    "cellophane @ git+https://github.com/ClinicalGenomicsGBG/cellophane.git@dev",
]
