[project]
name = "cellophane-mail"
version = "v1.0.0"
description = "Mail module for Cellophane"
authors = [{name = "dodslaser",email = "2969909+dodslaser@users.noreply.github.com"}]
readme = "README.md"
dependencies = [
    "jinja2>=3.1.2,<4.0.0",
    "mistletoe>=1.3.0,<2.0.0",
]
requires-python = ">=3.11"

[tool.coverage.run]
concurrency = ["multiprocessing", "thread"]
branch = true

[tool.coverage.paths]
source = [
  "/",
  "**/modules/mail/",
]

[tool.coverage.report]
include = [
  "src/*"
]

[tool.uv]
package = false