[project]
name = "cellophane-rsync"
version = "0.1.1"
description = "Rsync module for Cellophane"
authors = [{name = "dodslaser",email = "2969909+dodslaser@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
   "humanfriendly>=10.0,<11.0"
]

[dependency-groups]
dev = [
    "mypy>=1.0.0,<2.0.0",
    "black>=23.1.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "flake8>=6.0.0,<7.0.0",
    "pytest-mock>=3.11.1,<4.0.0",
    "pytest-clarity>=1.0.1,<2.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-subprocess>=1.5.3",
    "pylint>=3.0.2,<4.0.0",
    "cellophane @ git+https://github.com/ClinicalGenomicsGBG/cellophane.git@dev",
    "pytest>=9.0.2",
]

[tool.coverage.run]
concurrency = ["multiprocessing", "thread"]
branch = true

[tool.coverage.paths]
source = [
  "/",
  "**/modules/nextflow/",
]

[tool.coverage.report]
include = [
  "src/*"
]

[tool.uv]
package = false