[project]
name = "cellophane-rsync"
version = "0.1.1"
description = "Rsync module for Cellophane"
authors = [{name = "dodslaser",email = "2969909+dodslaser@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
   "humanfriendly>=10.0,<11.0"
]

[tool.coverage.run]
concurrency = ["multiprocessing", "thread"]
branch = true

[tool.coverage.paths]
source = [
  "/",
  "**/modules/nextflow/",
]

[tool.coverage.report]
include = [
  "src/*"
]

[tool.uv]
package = false