[project]
name = "cellophane-s3"
version = "v0.1.0"
description = "S3 module for Cellophane"
authors = [{name = "dodslaser",email = "2969909+dodslaser@users.noreply.github.com"}]
readme = "README.md"
dependencies = [
    "boto3>=1.37.25",
]
requires-python = ">=3.11,<3.12"

[tool.coverage.run]
concurrency = ["multiprocessing", "thread"]
branch = true

[tool.coverage.paths]
source = [
  "/",
  "**/modules/s3/",
]

[tool.coverage.report]
include = [
  "src/*"
]

[tool.uv]
package = false