[project]
name = "cellophane-slims"
version = "0.1.1"
description = "SLIMS module for Cellophane"
authors = [{name = "dodslaser",email = "2969909+dodslaser@users.noreply.github.com"}]
readme = "README.md"
dependencies = [
   "humanfriendly>=10.0,<11.0",
   "slims-python-api==6.8.0"
]
requires-python = ">=3.11,<4.0"

[tool.coverage.run]
concurrency = ["multiprocessing", "thread"]
# branch = true

[tool.coverage.paths]
source = [
  "/",
  "**/modules/slims_/",
]

[tool.coverage.report]
include = [
  "src/*"
]

[tool.uv]
package = false